--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,15 @@
 name = "LLVMLoopInfo"
 uuid = "8b046642-f1f6-4319-8d3c-209ddc03c586"
 authors = ["chriselrod <elrodc@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [compat]
 julia = "1.2"
 
 [extras]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+PerformanceTestTools = "dc46b164-d16f-48ec-a853-60448fc869fe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["InteractiveUtils", "PerformanceTestTools", "Test"]
